probes/ctrl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ctrl
  name: ctrl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctrl
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ctrl
    spec:
      containers:
      - image: registry.access.redhat.com/ubi8/httpd-24
        name: httpd-24
        resources: {}
status: {}
