probes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: server
  name: server
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: server
    weight: null
status: {}
